RESOLVED FIXED141387
Fix the !ENABLE(DFG_JIT) build
https://bugs.webkit.org/show_bug.cgi?id=141387
Summary Fix the !ENABLE(DFG_JIT) build
Csaba Osztrogonác
Reported 2015-02-09 06:36:52 PST
error: ../../Source/JavaScriptCore/jit/Repatch.cpp: In function 'void JSC::linkPolymorphicCall(JSC::ExecState*, JSC::CallLinkInfo&, JSC::CallVariant, JSC::RegisterPreservationMode)': ../../Source/JavaScriptCore/jit/Repatch.cpp:1867:320: error: 'listDump' was not declared in this scope If DFG JIT is enabled, wtf/ListDump.h is included by DFGNode.h
Attachments
Patch (1.13 KB, patch)
2015-02-09 06:48 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-02-09 06:48:33 PST
WebKit Commit Bot
Comment 2 2015-02-09 10:07:50 PST
Comment on attachment 246270 [details] Patch Clearing flags on attachment: 246270 Committed r179831: <http://trac.webkit.org/changeset/179831>
WebKit Commit Bot
Comment 3 2015-02-09 10:07:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.