Fix the !ENABLE(DFG_JIT) build https://bugs.webkit.org/show_bug.cgi?id=141387

Reviewed by Darin Adler.

* jit/Repatch.cpp:


Canonical link: https://commits.webkit.org/159438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179831 268f45cc-cd09-0410-ab3c-d52691b4dbfc